# ComfyUI-BPT

./: README.md  nodes.py  pyproject.toml  requirements.txt
bpt/: __init__.py  postprocessors.py  shapevae-256.yaml  utils.py
bpt/miche/michelangelo/models/modules/: transformer_blocks.py
bpt/miche/michelangelo/models/tsal/: clip_asl_module.py  loss.py  sal_perceiver.py
bpt/miche/michelangelo/utils/: misc.py
bpt/model/: model.py
workflow/: bpt_workflow.json
